# matchbook

./: .dockerignore  .env  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  USER_GUIDE.md  docker-compose.yml  matchbook.code-workspace
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-all-projects.yml  ci.yml  docker-compose-build.yml  validate-all-projects.yml
services/gateway/: Cargo.toml  Dockerfile  README.md
services/gateway/src/: main.rs
services/matching-engine/: .env  Cargo.toml  Dockerfile  README.md
services/matching-engine/src/: lib.rs  main.rs
services/port/: .env  Cargo.toml  Dockerfile  README.md
services/port/src/: config.rs  handler.rs  main.rs  message.rs
services/retransmitter/: .dockerignore  .env  Cargo.toml  Dockerfile  README.md
services/retransmitter/src/: config.rs  main.rs
tests/: tests.rs
