[package]
name = "matchbook"
version = "0.1.0"
authors = ["Will Johnston <wbjohnston@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "integration"
path = "./tests/tests.rs"

[workspace]
members = [
    "./packages/*",
    "./services/*"
]

[dependencies]
