[package]
name = "matchbook"
version = "0.1.0"
authors = ["Will Johnston <wbjohnston@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "integration"
path = "./tests/tests.rs"


[dependencies]
matchbook-types = {path = "./packages/matchbook-types"}
matchbook-util = {path = "./packages/matchbook-util"}
fixer-upper = {path = "./packages/fixer-upper"}
matching-engine = {path = "./services/matching-engine"}
port = {path = "./services/port"}
retransmitter = {path = "./services/retransmitter"}
