[package]
name = "gateway"
version = "0.1.0"
authors = ["Will Johnston <wbjohnston@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.2.0", features = ["full"]}
socket2 = { version = "0.3.4", features = ["reuseport"] }