[package]
name = "matching-engine"
version = "0.1.0"
authors = ["Will Johnston <wbjohnston@gmail.com>"]
edition = "2018"
publish = false


[lib]
name = "matching_engine"
src = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
matchbook-types = {path = "../../packages/matchbook-types"}
matchbook-util = { path = "../../packages/matchbook-util" }
tokio = {version = "1.2.0", features = ["full"]}
socket2 = { version = "0.3.4", features = ["reuseport"] }
serde_json = "1.0"
env_logger = "0.8.2"
