[package]
name = "matching-engine"
version = "0.1.0"
authors = ["Will Johnston <wbjohnston@gmail.com>"]
edition = "2018"
publish = false


[lib]
name = "matching_engine"
src = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matchbook-types = {path = "../../packages/matchbook-types"}
matchbook-util = { path = "../../packages/matchbook-util" }
tracing = "0.1"
tracing-subscriber = "0.2"
tokio = {version = "1.2.0", features = ["full"]}
serde_json = "1.0"
