[package]
name = "matching-engine"
version = "0.1.0"
authors = ["Will Johnston <wbjohnston@gmail.com>"]
edition = "2018"
publish = false


[lib]
name = "matching_engine"
src = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.13"
matchbook-types = {path = "../../packages/matchbook-types"}
matchbook-util = { path = "../../packages/matchbook-util" }
tokio = {version = "1.8.4", features = ["full"]}
tokio-util = {version = "0.6.4", features = ["net", "codec"]}
tracing = "0.1"
tracing-subscriber = "0.2"
