[package]
name = "port"
version = "0.1.0"
authors = ["Will Johnston <wbjohnston@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.2.0", features = ["full"]}
serde_json = "1.0"
matchbook-types = { path = "../../packages/matchbook-types" }
matchbook-util = { path = "../../packages/matchbook-util" }
log = "0.4"
env_logger = "0.8.2"
