[package]
name = "port"
version = "0.1.0"
authors = ["Will Johnston <wbjohnston@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.13"
parking_lot = "0.11.1"
tokio = {version = "1.2.0", features = ["full"]}
tokio-util = {version = "0.6.3", features=["net", "codec"]}
serde_json = "1.0"
matchbook-types = { path = "../../packages/matchbook-types" }
matchbook-util = { path = "../../packages/matchbook-util" }
tracing = "0.1"
tracing-subscriber="0.2"
