[package]
name = "retransmitter"
version = "0.1.0"
authors = ["Will Johnston <wbjohnston@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
chrono = "0.4.19"
futures-test = "0.3.13"

[dependencies]
matchbook-types = { path = "../../packages/matchbook-types"}
matchbook-util = { path = "../../packages/matchbook-util"}
tokio = {version = "1.8.4", features = ["full"]}
tokio-util = {version = "0.6.3", features=["net", "codec"]}
tracing = "0.1"
tracing-subscriber="0.2"
futures = "0.3.13"

